# job-scanner

./: .env.example  .gitignore  CHANGELOG.md  README.md  ai-job-scan.md  build-spec.corrected.md  pyproject.toml  requirements.txt
config/: search_profile.yaml  sources.yaml  sources.yaml.sample
data/reports/: sample_report.md
src/job_scanner/: config.py  dedupe.py  http_client.py  importer.py  locking.py  main.py  migrations.py  models.py  normalize.py  pipeline.py  reporting.py  scoring.py  source_capabilities.py  source_discovery.py  source_validation.py  storage.py  utils.py
src/job_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/job_scanner/sources/: __init__.py  ashby.py  common.py  generic.py  generic_html.py  generic_json.py  greenhouse.py  lever.py  rss.py
tests/: helpers.py  test_compensation.py  test_config.py  test_dedupe.py  test_generic_parsers.py  test_importer.py  test_performance.py  test_pipeline_integration.py  test_pipeline_partial_failures.py  test_report_fixture.py  test_scoring.py  test_source_discovery.py  test_source_validation.py  test_sources_parsers.py  test_utils.py
tests/fixtures/: ashby_jobs.json  generic_json_jobs.json  greenhouse_jobs.json  html_jobs.html  lever_jobs.json  rss_jobs.xml  sample_report.csv  sample_report.json  sample_report.md
