[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scanner"
version = "0.1.0"
description = "Local-first CLI job listing scanner and scorer"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Job Scanner" }
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "typer>=0.12.0",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
job-scanner = "job_scanner.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
